--- a/config/application.yml
+++ b/config/application.yml
@@ -6,19 +6,19 @@ spring:
      driver-class-name: "com.mysql.jdbc.Driver"
      type: "com.alibaba.druid.pool.DruidDataSource"
      druid:
-        initial-size=10
-        min-idle=10
-        max-active:50
-        max-wait:60000
-        time-between-eviction-runs-millis:60000
-	min-evictable-idle-time-millis:300000
-	validation-query:SELECT 'x'
-	test-while-idle:true
-	test-on-borrow:false
-	test-on-return:false
-	pool-prepared-statements:true
-	max-pool-prepared-statement-per-connection-size:20
-	filters:wall,stat,log4j
-	connection-properties:druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-	useGlobalDataSourceStat:true
+        initial-size: 10
+        min-idle: 10
+        max-active: 50
+        max-wait: 60000
+        time-between-eviction-runs-millis: 60000
+        min-evictable-idle-time-millis: 300000
+        validation-query: SELECT 'x'
+        test-while-idle: true
+        test-on-borrow: false
+        test-on-return: false
+        pool-prepared-statements: true
+        max-pool-prepared-statement-per-connection-size: 20
+        filters: wall,stat,log4j
+        connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+        useGlobalDataSourceStat: true
 
