--- a/config/mframe-task.yml
+++ b/config/mframe-task.yml
@@ -1,5 +1,5 @@
 spring:
    datasource:
-      url: "jdbc:mysql://127.0.0.1:3306/commondb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
-      username: "common_dev"
-      password: "common_user"
+      url: "jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
+      username: "test"
+      password: "test"
