--- a/config/application.yml
+++ b/config/application.yml
@@ -26,3 +26,23 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
   type-aliases-package: com.mframe.cloud.**.domain
+
+#mybaits-plus配置，修改主键类型，mapper.xml、type 别名等
+mybatis-plus:
+  mapper-locations: classpath:mapper/**/*.xml
+  typeAliasesPackage: com.mframe.cloud.**.domain
+  global-config:
+      db-config:
+        #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+        id-type: 0
+        #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+        field-strategy: 1
+        #驼峰下划线转换
+        table-underline: true
+        #刷新mapper 调试神器
+        #table-prefix: t_
+        #数据库大写下划线转换
+        #capital-mode: true
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: true
