--- a/config/mframe-task.yml
+++ b/config/mframe-task.yml
@@ -1,5 +1,12 @@
+#spring:
+#   datasource:
+#      url: "jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
+#      username: "test"
+#      password: "test"
 spring:
    datasource:
-      url: "jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
-      username: "test"
-      password: "test"
+      druid:
+        url: "jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
+        master:
+          username: "test"
+          password: "test"
