--- a/config/mframe-task.yml
+++ b/config/mframe-task.yml
@@ -15,6 +15,9 @@ spring:
           url: "jdbc:mysql://127.0.0.1:3306/testdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
           username: "test"
           password: "test"
+spring:
+   datasource:
+      druid:    
         slave-one:
           url: "jdbc:mysql://127.0.0.1:3306/testdb-slave?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
           username: "root"
