--- a/config/mframe-task.yml
+++ b/config/mframe-task.yml
@@ -16,6 +16,7 @@ spring:
           username: "test"
           password: "test"
         slave-one:
+          enable: true
           url: "jdbc:mysql://127.0.0.1:3306/testdb-slave?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
           username: "root"
           password: "root"
