--- a/config/application.yml
+++ b/config/application.yml
@@ -58,3 +58,11 @@ mframe:
     shards:
     - host: 127.0.0.1
       port: 6379
+      
+# 注册到eureka server
+eureka:
+  client:
+    service-url:
+      defaultZone: http://test:test@192.168.99.100:8088/eureka/,http://test:test@192.168.99.100:8188/eureka/
+  instance:
+    prefer-ip-address: true #注册IP
