--- a/config/application.yml
+++ b/config/application.yml
@@ -72,3 +72,13 @@ eureka:
 management:
   security:
     enabled : false
+
+# 配置oauth权限忽略
+mframe:
+  oauth:
+    ignore:
+      urls:
+      - /swagger-resources/**
+      - /swagger-ui.html
+      - /**/v2/api-docs
+      - /swagger/api-docs
