--- a/config/mframe-admin.yml
+++ b/config/mframe-admin.yml
@@ -3,3 +3,9 @@ spring:
       url: "jdbc:mysql://127.0.0.1:3306/testdb-slave?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC"
       username: "test"
       password: "test"
+
+mframe:
+  oauth:
+    ignore:
+      urls:
+      - /admin/**
