--- a/config/application.yml
+++ b/config/application.yml
@@ -4,6 +4,7 @@
 spring:
   datasource:
      driver-class-name: "com.mysql.jdbc.Driver"
+     type: "com.alibaba.druid.pool.DruidDataSource"
      druid:
         initial-size: 10
         min-idle: 10
