--- a/config/application.yml
+++ b/config/application.yml
@@ -3,7 +3,7 @@
 # druid config数据库配置
 spring:
   zipkin:
-    base-url: http://localhost  # zipkin链路跟踪
+    base-url: http://192.168.99.100:9411  # zipkin链路跟踪
   datasource:
      driver-class-name: "com.mysql.jdbc.Driver"
      type: "com.alibaba.druid.pool.DruidDataSource"
