--- a/config/application.yml
+++ b/config/application.yml
@@ -4,6 +4,9 @@
 spring:
   zipkin:
     base-url: http://192.168.99.100:9411  # zipkin链路跟踪
+  sleuth:
+    sampler:
+      percentage: 1.0 # 抽样百分比 
   datasource:
      driver-class-name: "com.mysql.jdbc.Driver"
      type: "com.alibaba.druid.pool.DruidDataSource"
